# cmake-normalizer

./: .cmake  .codespellrc  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
cmake/: development.cmake
cmake/modules/: Normalizer.cmake  Tokenizer.cmake
cmake/modules/Normalizer/: Cli.cmake  Config.cmake  Data.cmake  LocalModules.cmake  Message.cmake  Normalize.cmake  Package.cmake  Progress.cmake  SelfUpdate.cmake  Timer.cmake
cmake/modules/Normalizer/Normalize/: CMakeMinimumRequired.cmake  Commands.cmake  Include.cmake  Indentation.cmake  Newlines.cmake  ObsoleteEndCommands.cmake  ObsoleteImmediateKeyword.cmake  ProcessorCountModule.cmake  Set.cmake  SpaceAfterCommand.cmake  Whitespace.cmake
docs/: CHANGELOG.md  CONTRIBUTING.md
tests/Integration/: CMakeLists.txt  SelfUpdate.cmake
tests/Unit/: CMakeLists.txt  RunCMake.cmake
tests/Unit/Normalizer/: Config.cmake  SelfUpdate.cmake  Timer.cmake  Tokenizer.cmake
tests/data/code/: clean.cmake  cmake_minimum_required.cmake  commands.cmake  immediate_keyword.cmake  include.cmake  obsolete_end_commands.cmake  set.cmake  space_after_command.cmake  trailing_whitespace.cmake
